<resources>
    <string name="app_name">TaskHive</string>

    <string name="about_app">A Bitmessage client for Android</string>
    <string name="title_message_detail">Message Detail</string>
    <string name="title_subscription_detail">Subscription Detail</string>
    <string name="bitmessage_full_node">Bitmessage Node</string>
    <string name="wifi_mode">Wi-Fi Connection Mode</string>
    <string name="settings">Settings</string>
    <string name="wifi_only">Wi-Fi only</string>
    <string name="wifi_only_summary">Don\'t connect to the mobile network</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="manage_identity">Manage Identity</string>
    <string name="add_identity">Add Identity</string>
    <string name="add_identity_summary">Create new identity</string>
    <string name="title_activity_open_bitmessage_link">Import Contact</string>

    <string name="action_settings">Settings</string>
    <string name="connection_info_1">Stream #%1$d: one connection</string>
    <string name="connection_info_n">Stream #%1$d: %2$d connections</string>
    <string name="import_address">Import Address</string>
    <string name="import_contact">Add to contacts</string>
    <string name="label">Label</string>
    <string name="subscribe">Subscribe</string>
    <string name="do_import">Import</string>
    <string name="cancel">Cancel</string>
    <string name="broadcast">Broadcast</string>
    <string name="n_new_messages">%d new messages</string>
    <string name="reply">Reply</string>
    <string name="delete">Delete</string>
    <string name="mark_unread">Mark unread</string>
    <string name="archive">Archive</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="stream_number">Stream #%d</string>
    <string name="enabled">Enabled</string>
    <string name="trusted_node">Trusted node</string>
    <string name="trusted_node_summary">Use this node for synchronization</string>
    <string name="sync_timeout">Synchronization Timeout</string>
    <string name="sync_timeout_summary">Timeout in seconds</string>
    <string name="write_message">Write message</string>
    <string name="full_node">Full node</string>
    <string name="send">Send</string>
    <string name="connection_info_disconnected">Disconnected</string>
    <string name="connection_info_pending">Connecting…</string>
    <string name="proof_of_work_title">Proof of Work</string>
    <string name="proof_of_work_text">Doing work to send message (%1$d queued)</string>
    <string name="error_invalid_sync_port">Invalid port in synchronization settings: %s</string>
    <string name="error_invalid_sync_host">Synchronization failed: Trusted node could not be reached.</string>
    <string name="compose_body_hint">Write message</string>
    <string name="contacts_and_subscriptions">Contacts</string>
    <string name="subscribed">Subscribed</string>
    <string name="server_pow">Server POW</string>
    <string name="server_pow_summary">Trusted node does proof of work</string>
    <string name="full_node_warning">Running a full Bitmessage node uses a lot of traffic, which could be expensive on a mobile network. Are you sure you want to start a full node?</string>
    <string name="about">About Abit</string>
    <string name="about_summary">Open source dependencies.</string>
    <string name="title_activity_status">Debugging</string>
    <string name="status">Debugging</string>
    <string name="status_summary">Technical information</string>
    <string name="alias_default_identity">Me</string>
    <string name="pubkey_available">Public key available</string>
    <string name="pubkey_not_available">Public key not yet available</string>
    <string name="alt_qr_code">QR code</string>
    <string name="add_identity_warning">Having more identities will reequire more resources. Are you sure you want to add an identity?</string>
    <string name="share">Share</string>
    <string name="delete_identity_warning">Are you sure you want to delete this identity? You won\'t be able to receive any messages sent to this address and can\'t undo this operation.</string>
    <string name="delete_contact_warning">Are you sure you want to delete this contact?</string>
    <string name="no_messages">No messages!</string>


    <string name="new_key">New</string>
    <string name="load">Load</string>
    <string name="import_key">Import</string>
    <string name="anonymous">Anonymous</string>
    <string name="account_public">Public</string>
    <string name="offer">Offer</string>
    <string name="request">Request</string>
    <string name="task_description">Task description</string>
    <string name="payment_method">Payment Method</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="task_category">Task category</string>
    <string name="add">Add</string>
    <string name="post_task">Post Task</string>
    <string name="task_type">Task Type</string>
    <string name="paypal">Paypal</string>
    <string name="dogecoin">Dogecoin</string>
    <string name="task_keywords">Task Keywords</string>
    <string name="keyword">Keyword</string>
</resources>
