<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:autolabel="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ComposeMessageActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_arrow"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="Create Task"
            app:titleTextColor="@color/white"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/task_type"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/offer_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/offer"/>

            <RadioButton
                android:id="@+id/request_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/request"/>

        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/task_description_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/task_description_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_description"
                android:inputType="text"
                android:maxLines="2"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/task_category_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/task_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_category"
                android:inputType="number"
                android:maxLines="2"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/payment_method"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/bitcoin_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/bitcoin"/>

            <CheckBox
                android:id="@+id/paypal_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/paypal"/>

            <CheckBox
                android:id="@+id/dogecoin_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dogecoin"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/task_keywords"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <com.dpizarro.autolabel.library.AutoLabelUI
            android:id="@+id/keyword_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            autolabel:show_cross="true"
            autolabel:text_color="@color/white"
            autolabel:text_size="14sp"
            autolabel:icon_cross="@drawable/ic_close"
            autolabel:label_background_res="?attr/colorPrimary"
            autolabel:label_padding="4dp"
            autolabel:label_clickable="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/keyword_editText"
                android:layout_width="0dp"
                android:hint="@string/keyword"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:maxLines="1"/>

            <Button
                android:id="@+id/add_keyword_button"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginLeft="8dp"
                android:background="?attr/colorPrimary"
                android:text="@string/add"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded"/>

        </LinearLayout>

        <Button
            android:id="@+id/post_job_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/colorPrimary"
            android:text="@string/post_task"
            android:textColor="@color/white"/>

    </LinearLayout>


</LinearLayout>
